// =============================================================================
// Plantilla base CorAll — Esquema de base de datos (DBML)
//
// AGREGADO raíz: espejo de postgres/tables.sql, estructurado POR ESQUEMA con
// `core` como base. Al agregar esquemas de negocio, anexa aquí sus tablas y usa
// `ref:` reales entre esquemas (los .dbml por esquema usan notas para refs
// cross-schema; ver postgres/README.md).
//
// Render / edición: https://dbdiagram.io  ·  https://dbml.dbdiagram.io
// =============================================================================

Project app_base {
  database_type: 'PostgreSQL'
  Note: 'Plantilla base CorAll — núcleo de identidad, accesos, auditoría y notificaciones.'
}

// ─────────────────────────────────────────────────────────────────────────────
// ENUMs
// ─────────────────────────────────────────────────────────────────────────────

// Operaciones de la bitácora. Las cinco primeras las escribe solo el trigger
// genérico; las demás las declaran los procedimientos y la capa HTTP.
Enum auditoria.enum_operacion {
  INSERT          [note: 'Alta (fila completa en datos_despues)']
  UPDATE          [note: 'Modificación (solo el diff, en campos)']
  DELETE          [note: 'Borrado físico (fila completa en datos_antes)']
  BAJA            [note: 'Soft-delete: status TRUE → FALSE']
  REACTIVACION    [note: 'Soft-delete revertido: status FALSE → TRUE']
  LECTURA         [note: 'Acceso a información']
  DESCARGA        [note: 'Entrega de un archivo / URL firmada']
  EXPORTACION     [note: 'Volcado masivo a Excel/PDF']
  LOGIN           [note: 'Inicio de sesión correcto']
  LOGIN_FALLIDO   [note: 'Credenciales inválidas o cuenta inactiva']
  ACCESO_DENEGADO [note: '403 del guard, o credencial rechazada (reuso de token)']
}

// Motivo por el que una sesión dejó de estar activa.
Enum core.enum_session_revoke_reason {
  LOGOUT          [note: 'El usuario cerró sesión en ese dispositivo']
  MANUAL          [note: 'Cerrada por el usuario desde "Sesiones"']
  PASSWORD_CHANGE [note: 'Cambio/restablecimiento de contraseña']
  REUSE_DETECTED  [note: 'Refresh token ya rotado (posible robo)']
  ADMIN           [note: 'Cierre forzado por un administrador']
}

// ─────────────────────────────────────────────────────────────────────────────
// ESQUEMA core — Identidad, accesos, auditoría y notificaciones (BASE)
// ─────────────────────────────────────────────────────────────────────────────

Table core.permissions {
  id          serial       [pk]
  name        varchar(100) [not null]
  slug        varchar(100) [not null, unique]
  description text
  status      boolean      [default: true]
  user_cr     integer
  token_cr    uuid
  date_cr     bigint       [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up     integer
  token_up    uuid
  date_up     bigint
  Note: 'Catálogo de permisos (slug). Sincronizado con core/permissions.constants.ts'
}

Table core.users {
  id            serial       [pk]
  first_name    varchar(100) [not null]
  last_name     varchar(100) [not null]
  email         varchar(150) [not null]
  password_hash varchar(255) [not null]
  phone         varchar(20)
  foto_url      varchar(500)
  last_login    bigint
  dni           varchar(20)
  cargo         varchar(150)
  enable        boolean      [default: true, note: 'Activo / Inactivo']
  status        boolean      [default: true, note: 'Visible (soft delete) / Hidden']
  user_cr       integer
  token_cr      uuid
  date_cr       bigint       [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up       integer
  token_up      uuid
  date_up       bigint
}

Table core.roles {
  id          serial           [pk]
  name        varchar(100)     [not null]
  description text
  is_system   boolean          [default: false]
  enable      boolean          [default: true]
  status      boolean          [default: true]
  user_cr     integer
  token_cr    uuid
  date_cr     bigint           [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up     integer
  token_up    uuid
  date_up     bigint
}

Table core.role_permissions {
  id            serial  [pk]
  role_id       integer [not null, ref: > core.roles.id]
  permission_id integer [not null, ref: > core.permissions.id]
  status        boolean [default: true]
  user_cr       integer
  token_cr      uuid
  date_cr       bigint  [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up       integer
  token_up      uuid
  date_up       bigint

  indexes {
    (role_id, permission_id) [unique]
  }
}

Table core.user_roles {
  id       serial  [pk]
  user_id  integer [not null, ref: > core.users.id]
  role_id  integer [not null, ref: > core.roles.id]
  status   boolean [default: true]
  user_cr  integer
  token_cr uuid
  date_cr  bigint  [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up  integer
  token_up uuid
  date_up  bigint

  indexes {
    (user_id, role_id) [unique]
  }
}

Table core.notifications {
  id         uuid         [pk, default: `uuidv7()`]
  user_id    integer      [not null, ref: > core.users.id]
  title      varchar(150) [not null]
  message    text         [not null]
  type       varchar(30)  [not null]
  module     varchar(50)
  link       varchar(255)
  is_read    boolean      [default: false]
  created_at timestamptz  [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, is_read)
  }
  Note: 'Notificaciones del sistema (campana de notificaciones).'
}

Table core.password_recovery {
  id            serial       [pk]
  user_id       integer      [not null, ref: > core.users.id]
  recovery_code varchar(6)   [not null]
  email         varchar(150) [not null]
  expires_at    bigint       [not null]
  used          boolean      [default: false]
  attempts      integer      [default: 0]
  created_at    bigint       [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  used_at       bigint

  indexes {
    recovery_code
    user_id
    email
  }
  Note: 'Códigos de recuperación de contraseña de usuarios internos (intranet).'
}

Table core.user_sessions {
  id                 uuid         [pk, default: `uuidv7()`]
  user_id            integer      [not null, ref: > core.users.id]
  refresh_hash       "char(64)"   [not null, note: 'SHA-256 del refresh vigente']
  ip_address         varchar(45)
  user_agent         varchar(300)
  device             varchar(120) [note: 'Etiqueta legible, p.ej. Chrome · Windows']
  date_cr            bigint       [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  last_used_at       bigint
  expires_at         bigint       [not null]
  revoked_at         bigint
  revoked_reason     core.enum_session_revoke_reason
  revoked_by_user    integer      [note: 'Quién la cerró (usuario o admin)']
  revoked_by_session uuid         [note: 'Desde qué sesión se cerró']

  indexes {
    user_id
    refresh_hash
  }
  Note: 'Sesiones abiertas (refresh token rotativo). El id es el sid del access token y el token_cr/token_up del resto de tablas. Tabla de evento: sin bloque de auditoría.'
}

// ─────────────────────────────────────────────────────────────────────────────
// ESQUEMA auditoria — Bitácora inmutable de acciones (BASE)
// Espejo de auditoria/auditoria-tables.dbml
//
// Sin `ref:` a propósito, aunque `usuario_id` y `sesion_id` apunten a core: no
// son FK reales ni en el DDL. La evidencia debe sobrevivir al borrado del
// usuario que la generó y a la purga de sesiones.
// ─────────────────────────────────────────────────────────────────────────────

Table auditoria.log {
  id_log        bigserial                [pk]
  esquema       varchar(63)              [not null]
  entidad       varchar(63)              [not null, note: 'Tabla física o recurso lógico']
  id_registro   varchar(80)              [note: 'PK como texto: sirve para INTEGER y para UUID']
  operacion     auditoria.enum_operacion [not null]
  usuario_id    integer                  [note: 'FK lógica → core.users.id']
  rol           varchar(100)             [note: 'El rol que tenía EN EL MOMENTO de la acción']
  sesion_id     uuid                     [note: 'FK lógica → core.user_sessions.id']
  id_caso       varchar(80)              [note: 'Agregado de negocio; NULL en la plantilla']
  campos        jsonb                    [note: 'UPDATE: {columna: {antes, despues}}']
  datos_antes   jsonb                    [note: 'Fila completa en DELETE (enmascarada)']
  datos_despues jsonb                    [note: 'Fila completa en INSERT (enmascarada)']
  detalle       text
  ip            varchar(60)
  user_agent    varchar(300)
  endpoint      varchar(200)
  txid          bigint                   [not null, default: `txid_current()`]
  fecha         bigint                   [not null, default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]

  indexes {
    (esquema, entidad, id_registro, fecha)
    (usuario_id, fecha)
    (id_caso, fecha) [note: 'PARCIAL: WHERE id_caso IS NOT NULL']
    (operacion, fecha)
    fecha
    txid
  }

  Note: 'Bitácora inmutable: SOLO admite INSERT. Dos triggers abortan UPDATE, DELETE y TRUNCATE.'
}

TableGroup core {
  core.permissions
  core.users
  core.roles
  core.role_permissions
  core.user_roles
  core.notifications
  core.password_recovery
  core.user_sessions
}

TableGroup auditoria {
  auditoria.log
}
